plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'info.solidsoft.pitest' version '1.15.0'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '3.5.13'
  id 'uk.gov.hmcts.java' version '0.12.68'
  id 'org.owasp.dependencycheck' version '10.0.3'
  id 'com.github.ben-manes.versions' version '0.51.0'
  id 'org.sonarqube' version '7.2.3.7755'
  id 'au.com.dius.pact' version '4.6.20'
  id 'com.adarshr.test-logger' version '4.0.0'
  id "io.freefair.lombok" version "9.2.0"
  id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output + test.output
      runtimeClasspath += main.output + test.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }

  contractTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/contractTest/java')
    }
    resources.srcDir file('src/contractTest/resources')
  }
}

processFunctionalTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processContractTestResources {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs += [
    '-parameters',
    '-Xlint:deprecation',
    '-Xlint:unchecked'
  ]
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

test {
  useJUnitPlatform()
  failFast = true
}

tasks.register('functional', Test) {
  description = 'Runs the functional tests'
  group = 'Verification'
  systemProperty 'scenario', System.getProperty('scenario')

  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  finalizedBy aggregate
  testLogging {
    showStandardStreams = true
    showCauses = true
    showExceptions = true
    showStackTraces = true
  }
}

tasks.register('integration', Test) {
  description = 'Runs the integration tests'
  group = 'Verification'
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

tasks.register('smoke', Test) {
  description = 'Runs Smoke Tests'
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

tasks.register('contract', Test) {
  group = 'Verification'
  description = 'Runs the consumer Pact tests'
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

tasks.register('fortifyScan', JavaExec) {
  description = 'Run fortify scan.'
  mainClass = 'uk.gov.hmcts.fortifyclient.FortifyClientMainApp'
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

checkstyle {
  maxWarnings = 0
  toolVersion = '10.26.0'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = '6.55.0'
  ignoreFailures = true
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
  reportsDir = file("${project.getLayout().getBuildDirectory()}/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files('config/pmd/ruleset.xml')
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required.set(true)
    csv.required.set(false)
    xml.outputLocation.set(layout.buildDirectory.file('reports/jacoco/test/jacocoTestReport.xml'))
  }
}

tasks.named('sonarqube') {
  dependsOn(test, integration, jacocoTestReport)
}

pitest {
  junit5PluginVersion = '1.1.2'
  targetClasses = ['uk.gov.hmcts.reform.iacasepaymentsapi.*']
  excludedClasses = [
    'uk.gov.hmcts.reform.iacasepaymentsapi.infrastructure.config.*',
    'uk.gov.hmcts.reform.iacasepaymentsapi.Application',
    'uk.gov.hmcts.reform.iacasepaymentsapi.CcdScenarioRunnerTest'
  ]
  threads = 10
  outputFormats = ['XML', 'HTML']
  timestampedReports = true
  failWhenNoMutations = false
  verbose = true
  mutationThreshold = 82
}

tasks.named('pitest') {
  group = 'Verification'
}

sonarqube {
  properties {
    property 'sonar.projectName', 'IA :: Immigration & Asylum Payments API'
    property 'sonar.projectKey', 'IACASEPAYMENTSAPI'
    property 'sonar.coverage.jacoco.xmlReportPaths', layout.buildDirectory.file('reports/jacoco/test/jacocoTestReport.xml').get().asFile
    property 'sonar.pitest.mode', 'reuseReport'
    property 'sonar.pitest.reportsDirectory', 'build/reports/pitest'
    property 'sonar.exclusions', 'src/main/java/uk/gov/hmcts/reform/iacasepaymentsnapi/infrastructure/config/**,' +
      'src/main/java/uk/gov/hmcts/reform/iacasepaymentsnapi/Application.java'
  }
}

project.ext {
  pacticipant = 'ia_casePaymentsApi'
  if (System.env.GIT_COMMIT) {
    pacticipantVersion = System.env.GIT_COMMIT.substring(0, 9)
  } else {
    pacticipantVersion = getCheckedOutGitCommitHash()
  }
}

static def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}


tasks.register('runAndPublishConsumerPactTests', Test) {
  description = 'Publish pact test to broker'
  group = 'Verification'
  onlyIf {
    return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
  }
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  systemProperty 'pact.rootDir', 'pacts'
  testLogging.showStandardStreams = true
}

pact {
  broker {
    pactBrokerUrl = System.getenv('PACT_BROKER_FULL_URL') ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = 'pacts'
    tags = [System.getenv('PACT_BRANCH_NAME') ?: 'Dev']
    version = project.pacticipantVersion + '_' + System.nanoTime().toString()
  }
}

pactPublish {
  pactPublish = project.pact.publish
}

runAndPublishConsumerPactTests.finalizedBy pactPublish

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

dependencyCheck {
  suppressionFile = 'https://raw.githubusercontent.com/hmcts/ia-owasp-suppressions/refs/heads/master/ia-case-payments-api/suppressions.xml'

  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
}

dependencyManagement {
  imports {
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.2'
  }
  dependencies {
    dependencySet(group: 'org.junit.jupiter', version: '5.14.4') {
      entry 'junit-jupiter'
      entry 'junit-jupiter-api'
      entry 'junit-jupiter-engine'
      entry 'junit-jupiter-params'
    }

    dependencySet(group: 'org.junit.platform', version: '1.14.4') {
      entry 'junit-platform-commons'
      entry 'junit-platform-engine'
      entry 'junit-platform-launcher'
    }

    dependency group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'

    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.21.2') {
      entry 'jackson-databind'
      entry 'jackson-core'
    }

    dependencySet(group: 'com.fasterxml.jackson.core', version: '2.21') {
      entry 'jackson-annotations'
    }

    dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.21.2') {
      entry 'jackson-dataformat-yaml'
    }

    dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.21.2') {
      entry 'jackson-datatype-jsr310'
      entry 'jackson-datatype-jdk8'
    }

    dependencySet(group: 'com.fasterxml.jackson.module', version: '2.21.2') {
      entry 'jackson-module-parameter-names'
      entry 'jackson-module-afterburner'
    }

    dependencySet(group: 'org.mockito', version: '5.23.0') {
      entry 'mockito-core'
      entry 'mockito-junit-jupiter'
    }

    dependency group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}

idea {
  module {
    testSources.from(
      project.sourceSets.integrationTest.java.srcDirs,
      project.sourceSets.functionalTest.java.srcDirs,
      project.sourceSets.smokeTest.java.srcDirs,
      project.sourceSets.contractTest.java.srcDirs
    )
    testResources.from(
      project.sourceSets.integrationTest.resources.srcDirs,
      project.sourceSets.functionalTest.resources.srcDirs,
      project.sourceSets.smokeTest.resources.srcDirs,
      project.sourceSets.contractTest.resources.srcDirs
    )
  }
}

configurations {
  integrationTestImplementation.extendsFrom testImplementation
  integrationTestCompile.extendsFrom testCompile
  integrationTestRuntime.extendsFrom testRuntime
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestCompile.extendsFrom testCompile
  functionalTestRuntime.extendsFrom testRuntime
  contractTestImplementation.extendsFrom testImplementation
  contractTestCompile.extendsFrom testCompile
  contractTestRuntime.extendsFrom testRuntime
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-aop'
  implementation 'org.springframework.boot:spring-boot-starter-json'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
  implementation 'org.springframework.boot:spring-boot-starter-validation'

  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

  implementation 'org.springframework.security:spring-security-oauth2-client'
  implementation 'org.springframework.security:spring-security-oauth2-resource-server'
  implementation 'org.springframework.security:spring-security-oauth2-jose'

  implementation 'org.springframework:spring-aspects'
  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.12'

  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.17'

  implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '4.0.7'

  implementation 'com.fasterxml.jackson.core:jackson-core'
  implementation 'com.fasterxml.jackson.core:jackson-annotations'
  implementation 'com.fasterxml.jackson.core:jackson-databind'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'

  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'

  implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '3.2.0'

  implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'

  implementation 'org.springframework.boot:spring-boot-starter-cache'

  implementation 'org.springframework.boot:spring-boot-starter-data-redis'

  testImplementation 'org.springframework.security:spring-security-test'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'

  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '5.3.9'
  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '5.3.9'

  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
    exclude group: 'commons-io', module: 'commons-io'
    exclude group: 'org.apache.commons', module: 'commons-lang3'
  }

  testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '4.4.2'

  testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath

  contractTestImplementation 'org.springframework.boot:spring-boot-starter-test'
  contractTestImplementation 'com.fasterxml.jackson.core:jackson-core'
  contractTestImplementation 'com.fasterxml.jackson.core:jackson-databind'
  contractTestImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

  contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.6.20'
  contractTestImplementation group: 'au.com.dius.pact', name: 'consumer', version: '4.6.20'
}

mainClassName = 'uk.gov.hmcts.reform.iacasepaymentsapi.Application'

bootJar {
  getArchiveFileName().set(provider {
    'ia-case-payments-api.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}

testlogger {
  theme 'standard'
  showExceptions true
  showStackTraces true
  showFullStackTraces false
  showCauses true
  slowThreshold 5000
  showSummary true
  showSimpleNames false
  showPassed true
  showSkipped true
  showFailed true
  showStandardStreams false
  showPassedStandardStreams true
  showSkippedStandardStreams true
  showFailedStandardStreams true
}
